# epiphany-tabs-right

./: README
tabs-right/: Makefile.am  ephy-tabs-right-extension.c  ephy-tabs-right-extension.h  extension.c  tabs-right.ephy-extension.in.in
